styling.css
* {
    box-sizing: border-box;
    list-style-type: none;
    font-family: 'Architects Daughter', cursive;
}

body, html {
    height: 100%;
    overflow: auto;
}

.bg {
    background-image: url('media/bubbles.gif'), url('media/beer_bg.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 100%;
    width: 100%;
    position: fixed;
    z-index: -2;
}

header {
    position: fixed;
    width: 100%;
    display: grid;
    grid-template-columns: 3fr 6fr 3fr;
    grid-template-areas:
    'a b c'
    'a e c';
    align-items: center;
    text-align: center;
    background-color: #FFFFFF;
}

header a {
    grid-area: b;
    margin-top: 20px;
    margin-bottom: 0;
    font-family: 'Mansalva', cursive;
    font-size: 50px;
    color: #000000;
    text-decoration: none;
}

header h3 {
    grid-area: e;
    margin-top: 0;
}

button {
    cursor: pointer;
    transition-duration: 0.4s;
}

button:hover {
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
}

#searchForm input[name='search'] {
    background-color: #33cc33;
    color: #FFFFFF;
}

.filterText {
    width: 100%;
    position: absolute;
    text-align: center;
    bottom: 10px;
    grid-area: a;
    margin: 5px;
    color: #1e90FF;
    font-weight: bold;
}

#searchForm input[name='reset'] {
    background-color: #FF0000;
    color: #FFFFFF;
}

#addBeerButton {
    grid-area: c;
}

#addBeerButton button {
    width: 5em;
    height: 3em;
    background-color: #F16529;
    font-size: 25px;
}

.addPage {
    display: flex;
    justify-content: center;
    margin-top: 200px;
}

.addContainer {
    width: 75vw;
    padding: 50px;
    display: grid;
    grid-template-areas:
    '. a .'
    '. b .'
    '. c .';
    background-color: #FFFFFF;
}

.addContainer h1 {
    grid-area: a;
}

#beerForm {
    grid-area: b;
}

#beerForm input, select {
    display: block;
    height: 50px;
    width: 100%;
    transition-duration: 0.4s;
    margin-bottom: 10px;
    margin-top: 10px;
}

button[name='addBrewery'] {
    display: block;
    margin-bottom: 10px;
}

#beerForm input:hover, select:hover {
    border-color: #33cc33;
}

.error {
    color: #FF0000;
}

.formButtons {
    grid-area: c;
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
}

.formButtons button {
    color: #FFFFFF;
    width: 40%;
    min-height: 2em;
    font-size: 20px;
}

button[name='back'], button[name='backOne'] {
    background-color: #FFFFFF;
    border-color: #FF0000;
    color: #FF0000;
}

button[name='save'], button[name='saveBrewery'], button[name='saveChanges'] {
    background-color: #33cc33;
    border-color: #33cc33;
    color: #FFFFFF;
}

main {
    padding-top: 150px;
}

.letter h1 {
    text-align: center;
    font-size: 50px;
}

.beers {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
}

.beer {
    flex-shrink: 1;
    flex-grow: 1;
    flex-basis: 10%;
    /*min-width: 25vw;*/
    max-width: 400px;
    background-color: #FFFFFF;
    display: grid;
    justify-items: center;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-areas:
    'a a a'
    '. b d'
    '. c .';
    margin: 10px;
}

.summary {
    grid-area: a;
    height: 200px;
    text-align: center;
    font-size: 25px;
}

.summary a {
    color: #1e90FF;
}

.summary h2 {
    font-size: 40px;
}

.image {
    grid-area: b;
    /*max-width: 100%;*/
    /*height: 20%;*/
    width: 200px;
    height: 200px;
    text-align: center;
    overflow: hidden;
    position: relative;
}

.image img {
    /*max-width: 100%;*/
    /*object-fit: contain;*/
    position: absolute;
    max-width: 100%;
    width: 100%;
    height: auto;
    top: 50%;
    left: 50%;
    transform: translate( -50%, -50%);
}

.details {
    grid-area: c;
    font-size: 25px;
    text-align: center;
    height: 150px;
}

#beerButtons {
    grid-area: d;
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;
}

#beerButtons button {
    width: 100%;
    min-height: 2em;
    font-size: 20px;
}

#beerButtons button[name='addBeer'], #beerButtons button[name='updateBeer'] {
    background-color: #33cc33;
    color: #FFFFFF;
}

#beerButtons button[name='deleteBeer'] {
    background-color: #FF0000;
    color: #FFFFFF;
}

